--- a/serverless.yml
+++ b/serverless.yml
@@ -1,8 +1,5 @@
 service:
   name: uzilog-edge
-# app and org for use with dashboard.serverless.com
-#app: your-app-name
-#org: your-org-name
 
 custom:
   webpack:
@@ -16,15 +13,22 @@ plugins:
 provider:
   name: aws
   runtime: nodejs12.x
+  region: ap-northeast-2
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:DescribeTable
+        - dynamodb:Query
+        - dynamodb:Scan
+        - dynamodb:GetItem
+      Resource: "arn:aws:dynamodb:ap-northeast-2:*:*"
   apiGateway:
     minimumCompressionSize: 1024 # Enable gzip compression for responses > 1 KB
   environment:
     AWS_NODEJS_CONNECTION_REUSE_ENABLED: 1
 
 functions:
-  hello:
-    handler: handler.hello
-    events:
-      - http:
-          method: get
-          path: hello
+  metaTagOriginRequest:
+    handler: src/origin.request
+  metaTagViewerRequestRewriter:
+    handler: src/viewer.request
