--- a/serverless.yml
+++ b/serverless.yml
@@ -10,10 +10,14 @@ custom:
 plugins:
   - serverless-webpack
 
+package:
+  exclude:
+    - node_modules/**
+
 provider:
   name: aws
   runtime: nodejs12.x
-  region: ap-northeast-2
+  region: us-east-1
   iamRoleStatements:
     - Effect: Allow
       Action:
@@ -22,13 +26,14 @@ provider:
         - dynamodb:Scan
         - dynamodb:GetItem
       Resource: "arn:aws:dynamodb:ap-northeast-2:*:*"
-  apiGateway:
-    minimumCompressionSize: 1024 # Enable gzip compression for responses > 1 KB
-  environment:
-    AWS_NODEJS_CONNECTION_REUSE_ENABLED: 1
 
 functions:
-  metaTagOriginRequest:
-    handler: src/origin.request
-  metaTagViewerRequestRewriter:
-    handler: src/viewer.request
+  myLambdaAtEdge2:
+    handler: src/viewer.request;
+    events:
+      - cloudFront:
+          eventType: viewer-request
+          origin:
+            DomainName: duyf5qolb14b6.cloudfront.net
+            OriginPath: /*
+          authorizer: aws_iam
